samples/_failures_safe/1761711866_9630cc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7fdbf09.c: In function ‘main’:
./samples/SAFE/__tmp_c7fdbf09.c:151:17: error: expected expression at end of input
  151 |                 } else
      |                 ^
./samples/SAFE/__tmp_c7fdbf09.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7fdbf09.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c7fdbf09.c:151:17: error: expected declaration or statement at end of input
